src/objects/NokiaCPQ_Maintenance_and_SSP_Rules__c.object
<CustomObject>
    <description>This object contains Maintenance and SSP rules details with discount percentage based on product category and Price cluster</description>
    <fields>
        <fullName>NokiaCPQ_Biennial_SSP_Discount__c</fullName>
        <label>Biennial SSP Discount</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Bronze_RFE_Per_Subseq_Yr__c</fullName>
        <label>Maintenance. Bronze RFE % Subsequent Yr</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Gold_Bronze_RFE_Per_Subseq_Yr__c</fullName>
        <label>Maintenance. Gold RFE % Subsequent Yr</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maintenance_Bronze_RFE_Y1__c</fullName>
        <label>Maintenance. Bronze RFE % Y1</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maintenance_Gold_RFE_Per_Y1__c</fullName>
        <label>Maintenance Gold RFE % Y1</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maintenance_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Maintenance_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Pricing_Cluster__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Cluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Discount_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Discount Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Discount_Category_per__c</fullName>
        <label>Product Discount Category %</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Service_Rate_Y1__c</fullName>
        <label>Service Rate % Y1</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Service_Rate_Y2__c</fullName>
        <label>Service Rate % Y2</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Unlimited_SSP_Discount__c</fullName>
        <label>Unlimited SSP Discount</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_withPMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>withPMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <label>Partner Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NokiaCPQ_Partner_Program</valueSetName>
        </valueSet>
    </fields>
    <label>Maintenance and SSP Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Program__c</columns>
        <columns>NokiaCPQ_Pricing_Cluster__c</columns>
        <columns>NokiaCPQ_Product_Discount_Category__c</columns>
        <columns>NokiaCPQ_Product_Discount_Category_per__c</columns>
        <columns>NokiaCPQ_Service_Rate_Y1__c</columns>
        <columns>NokiaCPQ_Service_Rate_Y2__c</columns>
        <columns>NokiaCPQ_Maintenance_Level__c</columns>
        <columns>NokiaCPQ_Maintenance_Type__c</columns>
        <columns>NokiaCPQ_withPMA__c</columns>
        <columns>NokiaCPQ_Biennial_SSP_Discount__c</columns>
        <columns>NokiaCPQ_Unlimited_SSP_Discount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NokiaCPQ_Product_Discount_Category__c</field>
            <operation>equals</operation>
            <value>7750 SR-1/2/3e Common Equipment IPR</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Maint-{0000}</displayFormat>
        <label>Maintenance and SSP Rules</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance and SSP Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>